# cloak

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  DIAGRAMS.md  DOCUSAURUS_RESTRUCTURE.md  LICENSE  LOCALNET_SETUP.md  MULTI_TOKEN_SUPPORT_COMPLETE.md  Makefile  PDA_FIX_SUMMARY.md  README.md  README_SPL_SUPPORT.md  RUNBOOK.md  SPL_IMPLEMENTATION_COMPLETE.md  SPL_IMPLEMENTATION_GUIDE.md  SPL_IMPLEMENTATION_STATUS.md  SPL_TESTING_GUIDE.md  SPL_TOKEN_TEST_GUIDE.md  TEST_PROGRESS_SUMMARY.md  UNSTAKE_2PHASE_IMPLEMENTED.md  UNSTAKE_SIMPLIFIED.md  UNSTAKE_STATUS.md  UNSTAKE_TODO.md  VALIDATOR-WORK-NOTES.md  compose.yml  debug_pda.rs  docker-compose.yml  init.sql  justfile  miner.json  test_pda.rs
.context/sp1-solana/: Cargo.toml
.context/sp1-solana/example/pinocchio/: Cargo.toml
.context/sp1-solana/example/script/: Cargo.toml
.context/sp1-solana/solana-project/: APPLICATION_FLOW_DESIGN.md  CLEANUP_SUMMARY.md  COMPLETE_APPLICATION_ANALYSIS.md  Cargo.toml  DEMO_COMPLETE.md  README.md  SUMMARY.md  ZK_STUDY_SESSION_STATUS.md
.context/sp1-solana/solana-project/pinocchio-withdrawal-proof/: Cargo.toml  README.md  test_withdrawal_proof.rs
.context/sp1-solana/solana-project/withdrawal-json/: withdrawal_compressed_proof.json
.context/sp1-solana/solana-project/withdrawal-json-generator/: Cargo.toml
.context/sp1-solana/solana-project/withdrawal-proof/: .env.example  get_vkey_hash.rs
.context/sp1-solana/solana-project/withdrawal-wasm-verifier/: Cargo.toml
.context/sp1-solana/solana-project/withdrawal-web-interface/: index.html  package.json  server.js  server.py
programs/scramble-registry/: Cargo.toml  README.md  init-localnet.sh
programs/scramble-registry/src/: constants.rs  error.rs  lib.rs
programs/scramble-registry/src/instructions/: consume_claim.rs  initialize.rs  mine_claim.rs  mod.rs  reveal_claim.rs  top_up_escrow.rs
programs/scramble-registry/src/state/: claim.rs  miner.rs  mod.rs  registry.rs
programs/scramble-registry/src/tests/: consume_claim.rs  initialize.rs  mine_claim.rs  mod.rs  reveal_claim.rs
programs/scramble-registry/src/utils/: blake3.rs  difficulty.rs  mod.rs  pda_derivation.rs
programs/shield-pool/: Cargo.toml  README.md  build.rs
programs/shield-pool-upstream/: Cargo.toml  README.md
programs/shield-pool-upstream/src/: constants.rs  error.rs  lib.rs
programs/shield-pool-upstream/src/groth16/: mod.rs
programs/shield-pool-upstream/src/instructions/: admin_push_root.rs  deposit.rs  mod.rs  withdraw.rs
programs/shield-pool-upstream/src/state/: mod.rs  nullifier_shard.rs  roots_ring.rs
programs/shield-pool-upstream/src/tests/: admin_push_root.rs  deposit.rs  mod.rs  withdraw.rs
programs/shield-pool/src/: constants.rs  error.rs  instruction_data.rs  lib.rs  utils.rs
programs/shield-pool/src/instructions/: admin_push_root.rs  batch_withdraw.rs  deposit.rs  execute_swap.rs  execute_swap_via_orca.rs  initialize.rs  mod.rs  prepare_swap_sol.rs  recover_swap_funds.rs  release_swap_funds.rs  unstake_to_pool.rs  withdraw.rs  withdraw_miner_decoy.rs  withdraw_stake.rs  withdraw_swap.rs
programs/shield-pool/src/state/: mod.rs
programs/shield-pool/src/tests/: admin_push_root.rs  admin_push_root_test.rs  batch_withdraw.rs  deposit.rs  end_to_end_integration.rs  indexer_api_test.rs  integration_with_indexer.rs  mod.rs  withdraw.rs  withdraw_swap.rs
programs/shield-pool/tests/: withdraw_e2e.rs
services/indexer/: .dockerignore  .env.example  .env.spl.example  .gitignore  Cargo.toml  Dockerfile  README.md  SP1_TEE_INTEGRATION.md  TEE_FIX_VERIFICATION.md  bunfig.toml  env.docker  env.example  init.sql  jest.config.js  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start.sh  tsconfig.json
services/indexer/artifacts/: .gitkeep  README.md
services/indexer/src/: artifacts.rs  cloudwatch.rs  config.rs  error.rs  index.ts  lib.rs  logging.rs  main.rs  merkle.rs  secretsmanager.rs  solana.rs  sp1_tee_client.rs
services/indexer/src/api/: routes.ts  server.ts
services/indexer/src/database/: connection.rs  migrations.rs  mod.rs  storage.rs
services/indexer/src/db/: connection.ts  storage.ts
services/indexer/src/lib/: artifacts.ts  config.ts  logger.ts  merkle.ts
services/indexer/src/migrations/: 001_initial_schema.sql  001_initial_schema_fixed.sql  002_add_leaf_index_sequence.sql
services/indexer/src/scripts/: migrate.ts  test-deposit.ts  test-full-flow.ts
services/indexer/src/server/: final_handlers.rs  middleware.rs  mod.rs  prover_handler.rs  rate_limiter.rs  routes.rs  tee_artifact_handler.rs  tee_handlers.rs
services/indexer/src/tests/: api.test.ts  artifacts.test.ts  merkle.test.ts  setup.ts  storage.test.ts
services/indexer/src/types/: index.ts
services/relay/: .env.example  .env.spl.example  .gitleaksignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  FIXES_APPLIED.md  LOCAL_DEVELOPMENT.md  README.md  RUNNING_INSTRUCTIONS.md  TODO.md  TROUBLESHOOTING.md  WORKER_IMPLEMENTATION.md  cleanup-redis.sh  config.toml  docker-compose.yml  env.docker  env.example  prepare-sqlx.sh  test_compile.sh
services/relay/.cargo/: config.toml
services/relay/examples/: batch_commitment.rs  build_instructions.rs  end_to_end_mining.rs  fetch_mining_params.rs  swap_withdraw_example.rs  test_api.sh  test_jupiter_swap.rs  test_mining.rs  verify_mining.rs
services/relay/migrations/: 001_init.sql
services/relay/src/: claim_manager.rs  cloudwatch.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs  planner.rs  secretsmanager.rs
services/relay/src/api/: backlog.rs  mod.rs  prove_local.rs  status.rs  unstake.rs  validator_agent.rs  withdraw.rs
services/relay/src/db/: mod.rs  (+2 more)
services/relay/tests/: miner_integration.rs
test_complete_flow_rust/: Cargo.toml
test_complete_flow_rust/src/: main.rs  testnet_test.rs
tooling/test/: Cargo.toml
tooling/test/src/: batch_localnet_test.rs  helpers.rs  lib.rs  localnet_test.rs  prove_test.rs  prove_test_multiple_outputs.rs  prove_test_spl.rs  prove_test_stake.rs  prove_test_swap.rs  shared.rs  testnet_test.rs
(+236 files in other folders)
