[workspace]
members = [
    "verifier",
    "example/script",
    "example/program",
    "example/sp1-program",
    "example/pinocchio",
]
resolver = "2"

[workspace.dependencies]

# workspace
sp1-solana = { path = "verifier" }
fibonacci-verifier-contract = { path = "example/program" }
pinocchio-fibonacci-verifier-contract = { path = "example/pinocchio" }

# solana
solana-program = { version = "=2.1.6" }
solana-program-test = { version = "=2.1.6" }
solana-sdk = { version = "=2.1.6" }
borsh = "1.5.1"

# light protocol groth16 verifier
groth16-solana = "0.2.0"

# misc
num-bigint = "0.4.6"
num-traits = "0.2.19"
tokio = "1.40.0"
sha2 = "0.10.8"

# common dependencies
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.143", default-features = false, features = ["alloc"] }
clap = { version = "4.5.47", features = ["derive", "env"] }
tracing = "0.1.41"
hex = "0.4.3"
bincode = "1.3.3"
dotenv = "0.15.0"

# sp1
sp1-sdk = "5.2.1"
sp1-zkvm = "5.2.1"
sp1-build = "5.2.1"

# pinocchio
pinocchio = { git = "https://github.com/anza-xyz/pinocchio" }
five8_const = "0.1.3"
mollusk-svm = { git = "https://github.com/anza-xyz/mollusk" }
spl-token = "6.0.0"
hex-literal = "0.3.1"