[package]
name = "shield-pool-upstream"
version = "0.1.0"
edition = "2021"

[lib]
name = "shield_pool_upstream"
crate-type = ["cdylib", "rlib"]

[features]
default = []
no-entrypoint = []
fixed_proof_mode = []

[dependencies]
# Pinocchio dependencies (using workspace versions for compatibility)
pinocchio = { workspace = true }
pinocchio-pubkey = "0.3.0"
pinocchio-system = { workspace = true }
pinocchio-token = { workspace = true }

# Utilities
five8_const = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }

# SP1 Solana verifier
sp1-solana = { workspace = true }

# Groth16 verification dependencies
ark-ff = "0.4.2"
ark-bn254 = "0.4.0"
num-bigint = "0.4"
solana-bn254 = "2.1.7"

[dev-dependencies]
mollusk-svm = "0.7.0"
mollusk-svm-programs-token = "0.7.0"
solana-instruction = "3.0.0"
solana-address = "1.0.0"
spl-token-interface = "2.0.0"
solana-account = "3.1.0"
solana-program-pack = "3.0.0"
serde = { workspace = true }
serde_json = { workspace = true }
sp1-sdk = { workspace = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
