[package]
name = "shield-pool"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = []
no-entrypoint = []

[dependencies]
pinocchio = { workspace = true }
sp1-solana = { workspace = true }
five8_const = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
mollusk-svm = "0.5.1"
spl-token = "6.0.0"
mollusk-svm-programs-token = "0.5.1"
