[package]
name = "shield-pool"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
no-entrypoint = []
fixed_proof_mode = []

[dependencies]
pinocchio.workspace = true
pinocchio-system = { workspace = true }
five8_const = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
pinocchio-token = { workspace = true }
# Groth16 verification dependencies
sp1-solana = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
mollusk-svm = "0.5.1"
spl-token = "6.0.0"
mollusk-svm-programs-token = "0.5.1"
sp1-sdk.workspace = true
cloak-proof-extract = { path = "../../packages/cloak-proof-extract" }
