[package]
name = "relay"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[features]
default = ["full"]
full = ["axum/multipart", "tracing-subscriber/fmt"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Solana dependencies
solana-program = "=3.0.0"
solana-sdk = { version = "=3.0.0", features = ["full"] }
solana-client = "=3.0.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5"
uuid = { version = "1.0", features = ["serde", "v4"] }

# Configuration
config = "0.13"
serde_yaml = "0.9"
dotenv = "0.15"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"

# Database (for job queue and state)
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "migrate"] }


# Metrics
metrics = "0.21"
metrics-util = "0.15"
metrics-exporter-prometheus = "0.12"
once_cell = "1.19"

[dev-dependencies]
# Testing
tempfile = "3.0"
wiremock = "0.5"
testcontainers = { version = "0.25.0" }