[package]
name = "relay"
version = "0.1.0"
edition = "2021"
default-run = "relay"

[[bin]]
name = "relay"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
base64 = "0.21"

# Configuration  
config = "0.13"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"

# Database (simplified for now)
sqlx = { version = "0.6", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "offline",
] }

# Redis for job queue
redis = { version = "0.23", features = ["tokio-comp"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
async-trait = "0.1"

# Cryptography
blake3 = "1.5"
hex = "0.4"

# URL parsing
url = "2.4"

# Random number generation
fastrand = "2.0"

[dev-dependencies]
tempfile = "3.0"
