[workspace]
members = [
    "withdrawal-proof/program",
    "withdrawal-proof/script",
    "pinocchio-withdrawal-proof",
    "withdrawal-wasm-verifier",
    "withdrawal-json-generator",
]
resolver = "2"

[workspace.dependencies]
# SP1 dependencies
sp1-sdk = "5.2.1"
sp1-zkvm = "5.2.1"
sp1-build = "5.2.1"

# Solana dependencies
pinocchio = { git = "https://github.com/anza-xyz/pinocchio" }
five8_const = "0.1.4"
sp1-solana = { path = "../verifier" }
hex-literal = "0.3.4"

# Common dependencies
alloy-sol-types = "1.3.1"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.143", default-features = false, features = ["alloc"] }
clap = { version = "4.5.47", features = ["derive", "env"] }
tracing = "0.1.41"
hex = "0.4.3"
bincode = "1.3.3"
dotenv = "0.15.0"
alloy-rlp = "0.3.12"

