[package]
name = "pinocchio-withdrawal-proof-verifier-contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "pinocchio_withdrawal_proof_verifier_contract"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
test-sbf = []
default = []

[dependencies]
pinocchio = { workspace = true }
five8_const = { workspace = true }
sp1-solana = { workspace = true }
hex-literal = { workspace = true }
